# ipc

./: .gitmodules  CMakeLists.txt  README.md  ipc.pc.in
.github/workflows/: main.yml
cmake/: CheckGitDep.cmake  FindNUMA.cmake  ProjectInclude.cmake
git-dep/: gitmodules.cmake
git-dep/shm/: CMakeLists.txt  README.md
git-dep/shm/.github/workflows/: main.yml
git-dep/shm/include/: shm
git-dep/shm/lib/: CMakeLists.txt  shm.cpp
git-dep/shm/testsuite/: CMakeLists.txt  alloc.cpp  close.cpp  cppstylealloc.cpp  cppstyleopen.cpp  doublealloc.cpp  outofrange.cpp  pagemigrate.cpp  tworandomkeys.cpp  wrongkey.cpp  zerobytes.cpp  zerokeylength.cpp
helpers/: cacheinfo.cpp
include/: CMakeLists.txt  allocation_metadata.hpp  allocationexception.hpp  atomicregion.hpp  buffer  buffer.hpp  buffer_base.hpp  buffer_debug.hpp  buffer_helper.tcc  bufferdefs.hpp  ch_ctrl_all.hpp  ch_ctrl_spsc.hpp  ch_data_spsc.hpp  ch_entries_spsc.hpp  ch_meta_all.hpp  channel_helper.tcc  channelindex.hpp  channelinfo.hpp  channelinfo_base.hpp  channelinfo_spsc_rb.hpp  database.hpp  genericnode.hpp  indexbase.hpp  ipc_moduleflags.hpp.in  lock_ll.hpp  meta_info.hpp  mpmc_lock_free.hpp  padsize.hpp  recordindex.hpp  scratch.hpp  sem.hpp  shared_seg.hpp  spsc_lock_free.hpp  spsc_lock_free_data.hpp  threadlocaldata.hpp  traceclientexception.hpp  translate.hpp
modules/: localmodules.cmake
modules/cmake/: ProjectInclude.cmake
modules/heapalloc/: CMakeLists.txt
modules/heapalloc/cmake/: CheckSTD.cmake
modules/heapalloc/include/: CMakeLists.txt  _512bits.hpp  allocheap.hpp  helper.hpp
modules/heapalloc/src/: CMakeLists.txt  _512bits.cpp
modules/heapalloc/testsuite/: CMakeLists.txt  contiguouszeros.cpp  getnreturnblocks.cpp  getreturnall.cpp  leftright.cpp  main.cpp  parent.cpp  setbit.cpp  unsetbit.cpp  usage.cpp
scripts/: findnodes.pl
src/: .buffer.cpp.swo  CMakeLists.txt  allocationexception.cpp  buffer.cpp  buffer_base.cpp  genericnode.cpp  scratch.cpp  sem.cpp  threadinfo.cpp  traceclientexception.cpp  translate.cpp
testsuite/: CMakeLists.txt  allocateBuffer.cpp  allocationMultiChannelNoChannel.cpp  allocationMultiChannelOpen.cpp  allocationMultithreaded.cpp  allocationSPSCTest.cpp  allocationTest.cpp  calculateOffset.cpp  channelinfo_spacing.cpp  genericnode.cpp  haschannel.cpp  haschannels.cpp  lf_mn_node_insert.cpp  lf_mn_node_insert_remove_twothreads.cpp  lf_mn_node_remove.cpp  lf_spsc_node_insert_remove.cpp  lf_spsc_node_insert_remove_twothreads.cpp  locked_node_find.cpp  locked_node_insert.cpp  multiChannelIteration.cpp  nodeCounter.cpp  record_size.cpp  shared_seg_two_process.cpp  shared_seg_two_process_has_channel.cpp  spsc_two_processes.cpp  spsc_two_processes_has_data.cpp  spsc_two_processes_multi_channel.cpp  spsc_two_threads.cpp  test_posixv.cpp  translateaddress.cpp  zeronode.cpp
testsuite.bak/: allocateBuffer.cpp  allocationMultiprocess.cpp  allocationSPSCTest.cpp  bignode.cpp  lf_mn_node_insert_remove_twothreads.cpp  lf_mn_node_pop.cpp  lf_spsc_node_insert_remove_twothreads.cpp  locked_node_remove.cpp  translateaddress.cpp
